<resources>
    <string name="app_name">Memome</string>

    <string name="intro_one">Keep your memories</string>
    <string name="intro_one_text">
        Store your memories digitally.
        Organize them by adding labels to them.
        Labels are quickly accessible in the main menu.
    </string>

    <string name="intro_two">Synchronize with all your devices</string>
    <string name="intro_two_text">
        Real time synchronization for all your connected devices.
        Manage your memories easily and globally.
    </string>

    <string name="intro_three">Access anytime and anywhere</string>
    <string name="intro_three_text">
        Cloud based storage for your memories.
        Today, you have more ways to access them.
    </string>
    <string name="finish">Finish</string>
    <string name="previous">previous</string>
    <string name="next">next</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="title_activity_menu" translatable="false">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="memories">Memories</string>
    <string name="labels">Labels</string>
    <string name="archives">Archives</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

    <string name="language">Language</string>
    <string name="english" translatable="false">English</string>
    <string name="uzbek" translatable="false">O\'zbekcha</string>
    <string name="russian" translatable="false">Русский</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="start_writing_a_memory">Start writing a memory . . .</string>
    <string name="type_title">Type title</string>
    <string name="type_content">Type content</string>
    <string name="add_pictures">Add pictures</string>
    <string name="save">save</string>
    <string name="date">Date</string>
    <string name="delete">Delete</string>
    <string name="pictures">Pictures</string>
    <string name="show">Show</string>
    <string name="add_media">Add media</string>
    <string name="sure">Delete a memory?</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="coming_soon">Coming Soon . . .</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>