<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menus"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_memories"
            android:icon="@drawable/ic_photo_library"
            android:title="@string/memories" />
        <item
            android:id="@+id/nav_labels"
            android:icon="@drawable/ic_label"
            android:title="@string/labels" />
        <item
            android:id="@+id/nav_archives"
            android:icon="@drawable/ic_archive"
            android:title="@string/archives" />
    </group>
    <group>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_directions_run"
            android:title="@string/logout" />
    </group>
</menu>
