<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewmodel"
            type="uz.nasiba.avaz.memome.ui.menu.settings.SettingsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/language"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead" />

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@{viewmodel.language == `en` ? @drawable/ic_check : null}"
                    android:onClick="@{() -> viewmodel.changeLanguage(`en`)}"
                    android:padding="16dp"
                    android:text="@string/english"
                    android:textAlignment="textStart" />

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@{viewmodel.language == `uz` ? @drawable/ic_check : null}"
                    android:onClick="@{() -> viewmodel.changeLanguage(`uz`)}"
                    android:padding="16dp"
                    android:text="@string/uzbek"
                    android:textAlignment="textStart" />

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@{viewmodel.language == `ru` ? @drawable/ic_check : null}"
                    android:onClick="@{() -> viewmodel.changeLanguage(`ru`)}"
                    android:padding="16dp"
                    android:text="@string/russian"
                    android:textAlignment="textStart" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</layout>
