<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="uz.nasiba.avaz.memome.ui.create.CreateViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginBottom="32dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="@string/type_title"
                            android:inputType="textMultiLine"
                            android:text="@={viewmodel.title}"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:background="@null"
                            android:gravity="top"
                            android:hint="@string/type_content"
                            android:inputType="textMultiLine"
                            android:minHeight="200dp"
                            android:text="@={viewmodel.content}" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/date"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
                            android:visibility="@{viewmodel.date == null ? View.GONE : View.VISIBLE}" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:visibility="@{viewmodel.date == null ? View.GONE : View.VISIBLE}">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@{viewmodel.date}"
                                android:textSize="16sp" />

                            <View
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1" />

                            <ImageButton
                                style="@style/Widget.AppCompat.Button.Borderless"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:adjustViewBounds="true"
                                android:contentDescription="@string/delete"
                                android:onClick="@{() -> viewmodel.deleteDate()}"
                                android:src="@drawable/ic_close" />
                        </LinearLayout>

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/container"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>
        </ScrollView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/add_media" />

                <ImageButton
                    android:id="@+id/date"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/add_pictures"
                    android:src="@drawable/ic_event" />

                <ImageButton
                    android:id="@+id/pictures"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/add_pictures"
                    android:src="@drawable/ic_photo_library" />

                <ImageButton
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/save"
                    android:onClick="@{() -> viewmodel.save()}"
                    android:src="@drawable/ic_save" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</layout>
