<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF59D"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.intro.IntroActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animator"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:padding="16dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/intro_one" />

    <TextView
        android:id="@+id/title"
        style="@style/Base.TextAppearance.AppCompat.Title"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:textAlignment="center"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/text"
        style="@style/Base.TextAppearance.AppCompat.Body2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:textAlignment="center"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/previous"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="previous"
            android:text="@string/previous"
            android:visibility="gone" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/next"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="next"
            android:text="@string/next"
            android:visibility="gone" />

        <Button
            android:id="@+id/finish"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="finish"
            android:text="@string/finish"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>